{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 23,
  "lineage": "5af65afd-e501-b64e-5fb2-20e8fe3fb4b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097d2dcab75270307",
            "arn": "arn:aws:ec2:eu-west-1:335184790956:elastic-ip/eipalloc-097d2dcab75270307",
            "association_id": "eipassoc-0deb0da2780a9598e",
            "domain": "vpc",
            "id": "eipalloc-097d2dcab75270307",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c5bb55cb4b45220e",
            "private_dns": "ip-10-0-5-150.eu-west-1.compute.internal",
            "private_ip": "10.0.5.150",
            "public_dns": "ec2-52-212-250-8.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.250.8",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:internet-gateway/igw-0a865c70b984ffcf3",
            "id": "igw-0a865c70b984ffcf3",
            "owner_id": "335184790956",
            "tags_all": {
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097d2dcab75270307",
            "association_id": "eipassoc-0deb0da2780a9598e",
            "connectivity_type": "public",
            "id": "nat-04777e3a3f1804b1c",
            "network_interface_id": "eni-0c5bb55cb4b45220e",
            "private_ip": "10.0.5.150",
            "public_ip": "52.212.250.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b260a8dec1c52963",
            "tags_all": {
              "environment": "Dev",
              "purpose": "tf-engine"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d6a7951d18a28a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04777e3a3f1804b1c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d6a7951d18a28a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a865c70b984ffcf3",
            "id": "r-rtb-0579245c419390f0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0579245c419390f0b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.public_vpc",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:route-table/rtb-08d6a7951d18a28a1",
            "id": "rtb-08d6a7951d18a28a1",
            "owner_id": "335184790956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04777e3a3f1804b1c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "timeouts": null,
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:route-table/rtb-0579245c419390f0b",
            "id": "rtb-0579245c419390f0b",
            "owner_id": "335184790956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a865c70b984ffcf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "timeouts": null,
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.public_vpc",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatertassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f854f86b49f82cb3",
            "route_table_id": "rtb-08d6a7951d18a28a1",
            "subnet_id": "subnet-0900bbb0c46d4d740"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a609d6ed2fe99a6e",
            "route_table_id": "rtb-08d6a7951d18a28a1",
            "subnet_id": "subnet-05049e8b20c4c93c9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebdc44e32d38863c",
            "route_table_id": "rtb-08d6a7951d18a28a1",
            "subnet_id": "subnet-048f1a0281baef0b3"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef947d98577c05b",
            "route_table_id": "rtb-0579245c419390f0b",
            "subnet_id": "subnet-0b260a8dec1c52963"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a9ffcb9c442f6b6",
            "route_table_id": "rtb-0579245c419390f0b",
            "subnet_id": "subnet-0684fed3fb48e31fd"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f8c5396edbf4832",
            "route_table_id": "rtb-0579245c419390f0b",
            "subnet_id": "subnet-07581515a290292c9"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:subnet/subnet-0900bbb0c46d4d740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0900bbb0c46d4d740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335184790956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-west-1a"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-1a",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:subnet/subnet-05049e8b20c4c93c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05049e8b20c4c93c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335184790956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-west-1b"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-1b",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:subnet/subnet-048f1a0281baef0b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048f1a0281baef0b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335184790956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-west-1c"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-1c",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:subnet/subnet-0b260a8dec1c52963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b260a8dec1c52963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335184790956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-west-1a"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-1a",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:subnet/subnet-0684fed3fb48e31fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0684fed3fb48e31fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335184790956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-west-1b"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-1b",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        },
        {
          "index_key": "eu-west-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:subnet/subnet-07581515a290292c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07581515a290292c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335184790956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-west-1c"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-1c",
              "environment": "Dev",
              "purpose": "tf-engine"
            },
            "vpc_id": "vpc-020998d3fa3a78620"
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "data.aws_availability_zones.current",
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335184790956:vpc/vpc-020998d3fa3a78620",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.5.0/24",
            "default_network_acl_id": "acl-0a0e86031f199b68f",
            "default_route_table_id": "rtb-094f0d0b63aa20daf",
            "default_security_group_id": "sg-035eccd4b0903afe1",
            "dhcp_options_id": "dopt-0b22e4dfec27345bc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020998d3fa3a78620",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094f0d0b63aa20daf",
            "owner_id": "335184790956",
            "tags": {
              "Name": "testpublic"
            },
            "tags_all": {
              "Name": "testpublic",
              "environment": "Dev",
              "purpose": "tf-engine"
            }
          },
          "dependencies": [
            "data.aws_region.current",
            "data.aws_vpc_ipam_pool.fugropublicpool",
            "data.aws_vpc_ipam_preview_next_cidr.previewcidr"
          ]
        }
      ]
    }
  ]
}